part3/ping-pong-app/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  # namespace: dwk-main
  name: dwk-ping-pong-app
spec:
  type: LoadBalancer
  selector:
    app: dwk-ping-pong-app
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3002
